2005-12-21  Carl Worth  <cworth@cworth.org>

	* src/cairo-meta-surface-private.h: Remove cruft from old commands
	that the meta surface no longer implements (composite,
	fill_rectangles, composite_trapezoids, and set_clip_region).

2005-12-21  Christian Biesinger  <cbiesinger@web.de>

	* src/cairo-ft-font.c:
	(_cairo_ft_unscaled_font_create_for_pattern):
	* src/cairo-gstate.c:
	* src/cairoint.h:
	Fix some typos

2005-12-21  Emmanuel Pacaud <emmanuel.pacaud@free.fr>

	* src/cairo-svg-surface.c (_cairo_svg_surface_create_for_document):
	store surfaces in a <g> node, and clip to surface area. Now SVG
	backend should pass pixman-rotate test.
	(emit_composite_svg_pattern): emit transformation matrix.
	(_cairo_svg_surface_intersect_clip_path): don't use xmlBuffer here.

2005-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairo-meta-surface.c: Add some comments describing what a
	cairo_meta_surface_t is.
	
	* src/test-fallback-surface.c:
	* src/test-fallback-surface.h: Remove unused
	_test_fallback_surface_create_for_data.
	
	* src/test-meta-surface.c:
	* src/test-meta-surface.h: Remove unused
	_test_meta_surface_create_for_data. Add missing source file
	src/test-meta-surface.h.

2005-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-gstate.c: (_cairo_gstate_get_antialias):
	* src/cairo-surface-fallback.c: (_create_composite_mask_pattern),
	(_clip_and_composite_with_mask), (_clip_and_composite_combine),
	(_clip_and_composite_source), (_cairo_rectangle_empty),
	(_clip_and_composite), (_composite_trap_region),
	(_composite_traps_draw_func), (_clip_and_composite_trapezoids),
	(_cairo_surface_fallback_paint), (_cairo_surface_fallback_mask),
	(_cairo_surface_fallback_stroke), (_cairo_surface_fallback_fill),
	(_cairo_surface_fallback_show_glyphs): Move more fallback code
	from cairo-gstate.c to cairo-surface-fallback.c where it
	belongs. In the process, clean up the function names a bit and
	make the whole mess static.
